# monadics

./: .clang-format  .exemplar_version  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GNUmakefile  README.md  lockfile.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-update.yml  vcpkg-release.yml
cmake/: beman.monadics-config.cmake.in
docs/: design_rationale.md  paper.md  tutorial.md
examples/: CMakeLists.txt  expected.cpp  monadics_std_usage.cpp  optional.cpp  to.cpp
include/beman/monadics/: CMakeLists.txt  box_traits.hpp  monadics.hpp
include/beman/monadics/detail/: access_key.hpp  and_then.hpp  as_pointer.hpp  box_traits.hpp  callable_adaptor.hpp  config.hpp  decomposable.hpp  deduce_box_traits.hpp  deduce_lift_error_fn.hpp  deduce_lift_fn.hpp  deduce_make_error_fn.hpp  deduce_make_fn.hpp  deduce_value_fn.hpp  deduce_value_query_fn.hpp  extract_value_type.hpp  get_box_traits.hpp  get_error_fn.hpp  get_error_type.hpp  get_make_error_fn.hpp  get_make_fn.hpp  get_rebind.hpp  get_rebind_error.hpp  get_value_fn.hpp  get_value_query_fn.hpp  get_value_type.hpp  instance_of.hpp  invoke_with_error.hpp  invoke_with_value.hpp  make_with_error.hpp  make_with_value.hpp  meta_extract_value_type.hpp  meta_rebind.hpp  meta_rebind_error.hpp  meta_rebind_value.hpp  or_else.hpp  pipe.hpp  pipe_adaptor.hpp  propagate_error.hpp  propagate_value.hpp  rebox_error.hpp  (+7 more)
infra/cmake/: beman-install-library-config.cmake
port/: portfile.cmake.in  vcpkg.json.in
src/beman/monadics/: CMakeLists.txt  detail.cppm  monadics.cppm
tests/: CMakeLists.txt
tests/beman/monadics/: CMakeLists.txt
tests/beman/monadics/detail/: CMakeLists.txt  as_pointer.test.cpp  box_traits.test.cpp  callable_adaptor.test.cpp  decomposable.test.cpp  deduce_value_type.test.cpp  get_error_fn.test.cpp  get_error_type.test.cpp  get_make_error_fn.test.cpp  get_make_fn.test.cpp  get_rebind.test.cpp  get_rebind_error.test.cpp  get_value_fn.test.cpp  get_value_query_fn.test.cpp  get_value_type.test.cpp  has_box_traits.test.cpp  instance_of.test.cpp  invoke_with_error.test.cpp  invoke_with_value.test.cpp  meta_extract_value_type.test.cpp  meta_rebind.test.cpp  meta_rebind_error.test.cpp  meta_rebind_value.test.cpp  pipe_adaptor.test.cpp  propagate_error.test.cpp  propagate_value.test.cpp  rebox_error.test.cpp  rebox_value.test.cpp  same_box.test.cpp  same_unqualified_as.test.cpp
tests/beman/monadics/enum/: and_then.test.cpp  compose.test.cpp  or_else.test.cpp  trait.hpp  trait.test.cpp  transform.test.cpp  transform_error.test.cpp
tests/beman/monadics/expected/: and_then.test.cpp  compose.test.cpp  or_else.test.cpp  trait.hpp  trait.test.cpp  transform.test.cpp  transform_error.test.cpp
tests/beman/monadics/include/helpers/: keeps_return_value_category.hpp  move_only.hpp  move_tracker.hpp
tests/beman/monadics/optional/: and_then.test.cpp  compose.test.cpp  or_else.test.cpp  trait.hpp  trait.test.cpp  transform.test.cpp  transform_error.test.cpp
tests/beman/monadics/raw_ptr/: and_then.test.cpp  compose.test.cpp  or_else.test.cpp  trait.hpp  trait.test.cpp  transform.test.cpp  transform_error.test.cpp
tests/beman/monadics/result/: and_then.test.cpp  compose.test.cpp  or_else.test.cpp  trait.hpp  trait.test.cpp  transform.test.cpp  transform_error.test.cpp
tests/beman/monadics/shared_ptr/: and_then.test.cpp  compose.test.cpp  or_else.test.cpp  trait.hpp  trait.test.cpp  transform.test.cpp  transform_error.test.cpp
tests/integration/: CMakeLists.txt  main.cpp  main_import.cpp
tests/integration/fetchcontent/: CMakeLists.txt  main.cpp
tests/integration/find_package/: CMakeLists.txt
tests/integration/mixed/: CMakeLists.txt  lib_a.cpp  lib_a.hpp  lib_b.cpp  lib_b.hpp  lib_c.cpp  lib_c.hpp  main.cpp  optional_box_traits.hpp
